syntax = "proto3";

package systems.ajax.motrechko.airguardian.input.reqrepl.monitoringobject.get_monitoring_object;

option java_multiple_files = true;

import "systems/ajax/motrechko/airguardian/commonresponse/monitoringobject/monitoring_object.proto";

message GetMonitoringObjectRequest {
  string monitoring_object_id = 1;
}

message GetMonitoringObjectResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonresponse.monitoring_object.proto.MonitoringObject object = 1;
  }

  message Failure {
    string message = 100;
  }
}
