syntax = "proto3";

package systems.ajax.motrechko.airguardian.input.reqrepl.monitoringobject.get_monitoring_objects;

option java_multiple_files = true;

import "systems/ajax/motrechko/airguardian/commonresponse/monitoringobject/monitoring_object.proto";

message GetMonitoringObjectsRequest {
}

message GetMonitoringObjectsResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonresponse.monitoring_object.proto.MonitoringObject monitoring_object= 1;
  }

  message Failure {
    string message = 100;
  }
}
